[gd_scene load_steps=3 format=3 uid="uid://dram0hg8224ca"]

[ext_resource type="Script" path="res://src/Scenes/player_death_scene.gd" id="1_mupcu"]
[ext_resource type="Texture2D" uid="uid://dcullhwu0r4e6" path="res://Assets/Images/menu art/invasion2.jpg" id="2_meugt"]

[node name="Player_Death_Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mupcu")

[node name="Background" type="TextureRect" parent="."]
light_mask = 2
visibility_layer = 2
layout_mode = 0
offset_right = 1164.0
offset_bottom = 673.0
texture = ExtResource("2_meugt")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 260.0
offset_right = 659.0
offset_bottom = 388.0

[node name="Message" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You Died:"
horizontal_alignment = 1

[node name="Reset Scene Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Try Again?"

[node name="Select Level Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Select Level"

[node name="Main Menu Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/Reset Scene Button" to="." method="_on_reset_scene_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Select Level Button" to="." method="_on_select_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu Button" to="." method="_on_main_menu_button_pressed"]
